--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <title>Produce Price</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
         <h1>Maximise Your Produce!</h1>
+
+        <form class="example" action="#">
+            <input type="text" placeholder="Crop's name..." name="search">
+            <button type="search"><i class="fa fa-search"></i></button>
+        </form>
     </body>
 </html>
